# simple-assistant

./: README.md  app.py  pyproject.toml
