[tool.poetry]
name = "thoughful-ai-th"
version = "0.1.0"
description = ""
authors = ["Andy Spezzatti <andyspezzatti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.43.0"
sentence-transformers = "^3.4.1"
scikit-learn = "^1.6.1"
openai = "^1.65.4"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
